--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body id="theme-style" class="theme-pastel>
+<body id="theme-style" class="theme-vintage>
    <div id="colorlib-page">
       <div class="container-wrap">
          <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar"
