--- a/index.html
+++ b/index.html
@@ -128,33 +128,33 @@
                   <ul id="accordion" class="accordion animate-box" data-animate-effect="fadeInLeft">
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Programming and Scripting Languages</p>
+                           <p style="margin-bottom: 0px">Aerospace Simulation and Analysis Tools</p>
                         </div>
-                        <ul id="Programming and Scripting Languages" class="submenu">
+                        <ul id="Aerospace Simulation and Analysis Tools" class="submenu">
                            <!-- Changed ID to match JS data object -->
                         </ul>
                      </li>
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Database Management Systems</p>
+                           <p style="margin-bottom: 0px">Project Management Tools</p>
                         </div>
-                        <ul id="Database Management Systems" class="submenu">
+                        <ul id="Project Management Tools" class="submenu">
                            <!-- Changed ID to match JS data object -->
                         </ul>
                      </li>
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Testing and Automation Tools</p>
+                           <p style="margin-bottom: 0px">Engineering Design Software</p>
                         </div>
-                        <ul id="Testing and Automation Tools" class="submenu">
+                        <ul id="Engineering Design Software" class="submenu">
                            <!-- Changed ID to match JS data object -->
                         </ul>
                      </li>
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Version Control and CI/CD Tools</p>
+                           <p style="margin-bottom: 0px">Data Analysis and Visualization Tools</p>
                         </div>
-                        <ul id="Version Control and CI/CD Tools" class="submenu">
+                        <ul id="Data Analysis and Visualization Tools" class="submenu">
                            <!-- Changed ID to match JS data object -->
                         </ul>
                      </li>
