Remove commented out profile card script and section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <script src="js/modernizr-2.6.2.min.js" defer></script>
    <script type="module" src="index.js" defer></script>
    <script src="js/theme.js" defer></script>
-   <!-- <script src="js/profile-card.js" defer></script> -->
+   <script src="js/profile-card.js" defer></script>
 
 </head>
 <body id="theme-style" class="theme-ocean-breeze">
@@ -75,7 +75,7 @@
             </section>
             <!--------------------[END] About me---------------------------->
             <!--------------------[START] prof summary------------------------>
-            <!-- <section class="colorlib-profile" data-section="profile-card">
+            <section class="colorlib-profile" data-section="profile-card">
                <div class="colorlib-narrow-content">
                   <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                      <div class="profile-cards">
@@ -83,7 +83,7 @@
                      </div>
                   </div>
                </div>
-            </section> -->
+            </section>
             <!--------------------[END] prof summary-------------------------->
             <!--------------------[START] languages---------------------------->
             <section class="colorlib-languages" data-section="languages">
