picture face update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="keywords" content="">
    <meta name="author" content="">
 
-   <link rel="icon" type="image/png" href="/images/logo_face.png">
+   <link rel="icon" type="image/png" href="/images/logo_ideline_oct24.jpg">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&family=Playfair+Display:wght@400;400i;700&family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
          <aside id="colorlib-aside" role="complementary" class="border js-fullheight no-print">
             <div class="text-center">
                <div class="author-img">
-                  <img alt="profile-img" src="images/logo_face.png">
+                  <img alt="profile-img" src="images/logo_ideline_oct24.jpg">
                </div>
                <h1 id="colorlib-logo"><a href="./index.html" id="fullname"></a></h1>
                <p><b><a href="mailto:" id="email"></a></b></p>
