--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="keywords" content="">
    <meta name="author" content="">
 
-   <link rel="icon" type="image/png" href="/images/logo_face.png">
+   <link rel="icon" type="image/png" href="images/logo_face.png">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&family=Playfair+Display:wght@400;400i;700&family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
