--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                </div>
             </section>
             <!--------------------[END] Certifications---------------------------->
-            <!--------------------[START] Work Experience------------------->
+          <!--------------------[START] Work Experience------------------->
             <section class="colorlib-experience" data-section="experience">
                <div class="colorlib-narrow-content">
                   <div class="row row-bottom-padded-sm animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
@@ -129,10 +129,13 @@
                         <h1>Work <span class="highlightedText">Experience</span></h1>
                      </div>
                   </div>
-                  <div class="timeline-centered" id="experience"></div>
+                  <div class="timeline-centered" id="experience">
+                     <!-- JavaScript will insert experience items here -->
+                  </div>
                </div>
             </section>
             <!--------------------[END] Work Experience--------------------->
+
             <!--------------------[START] Education------------------------->
             <section class="colorlib-education" data-section="education">
                <div class="colorlib-narrow-content">
